Remove block's width overflows. Remove variable box-model spacings using percentage. Limit form to parent box and fix text concat selectors

--- a/themes/jeo-theme/assets/scss/5-pages/_p-category.scss
+++ b/themes/jeo-theme/assets/scss/5-pages/_p-category.scss
@@ -6,8 +6,8 @@ header.page-header.category {
     }
 }
 
-.category-page-sidebar {
+aside.category-page-sidebar {
     @include desktop{
-        width: 25%;
+        width: 26%;
     }
 }
